[package]
name = "bp-seals"
description = "Bitcoin protocol single-use-seals library"
keywords = ["lnp-bp", "bitcoin", "blockchain", "smart-contracts", "single-use-seals"]
categories = ["cryptography", "encoding"]
version = "0.11.1-beta.1"
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://github.com/BP-WG"
repository = "https://github.com/BP-WG/bp-seals"
rust-version = "1.81.0"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"

[lib]
name = "seals"
path = "src/lib.rs"

[[bin]]
name = "bpcore-stl"
required-features = ["stl"]

[dependencies]
amplify = "~4.8.0"
strict_encoding = "~2.8.2"
strict_types = { version = "~2.8.3", optional = true }
commit_verify = "0.11.1-alpha.2"
bp-consensus = "0.11.1-alpha.2"
baid64 = "0.4.2"
rand = "0.9.1"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }

[features]
default = []
all = ["serde", "stl"]
serde = [
    "serde_crate", "bp-consensus/serde"
]
stl = ["strict_types", "strict_types/armor", "commit_verify/stl", "bp-consensus/stl"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom2 = { package = "getrandom", version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]
