[package]
name = "bp-seals"
version = "0.5.0-rc.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Bitcoin single-use-seals library"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "bitcoin", "cryptography", "smart-contracts", "client-side-validation"]
categories = ["cryptography::cryptocurrencies", "encoding"]
readme = "README.md"
edition = "2018"

[lib]
name = "seals"
path = "src/lib.rs"

[dependencies]
amplify = "3.4"
bitcoin = "0.26"
single_use_seals = { version = "0.5.0-rc.1", path = "../single_use_seals" }
commit_verify = { version = "0.5.0-rc.1", path = "../commit_verify" }
bp-dbc = { version = "0.5.0-rc.1", path = "../bp-dbc" }
