[package]
name = "bp-consensus"
version = { workspace = true }
description = "Bitcoin protocol consensus library"
keywords = ["lnp-bp", "smart-contracts", "bitcoin", "blockchain"]
categories = ["cryptography"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "bc"

[dependencies]
amplify = { workspace = true }
strict_encoding = { workspace = true }
strict_types = { workspace = true }
commit_verify = { workspace = true }
secp256k1 = { workspace = true }
serde_crate = { workspace = true, optional = true }
chrono = { version = "0.4.38", optional = true }

[features]
default = ["chrono"]
all = ["chrono", "stl", "serde"]
stl = []
serde = [
    "serde_crate",
    "amplify/serde",
    "secp256k1/serde"
]

[package.metadata.docs.rs]
features = ["all"]
