[package]
name = "bp-dbc"
version = "0.10.0-rc.1"
description = "Deterministic bitcoin commitments library"
keywords = ["lnp-bp", "bitcoin", "blockchain", "smart-contracts", "single-use-seals"]
categories = ["cryptography", "encoding"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "dbc"
path = "src/lib.rs"

[dependencies]
amplify = { workspace = true }
strict_encoding = { workspace = true }
commit_verify = { workspace = true, features = ["rand"] }
bp-primitives = { version = "0.10.0-beta.3", path = "../primitives" }
secp256k1 = { version = "0.27.0", features = ["global-context", "rand-std"] }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }

[features]
default = []
all = ["serde"]
serde = [
    "serde_crate",
    "bp-primitives/serde",
    "commit_verify/serde",
    "secp256k1/serde"
]

[package.metadata.docs.rs]
features = [ "all" ]
