[package]
name = "bp-dbc"
version = { workspace = true }
description = "Deterministic bitcoin commitments library"
keywords = ["lnp-bp", "bitcoin", "blockchain", "smart-contracts", "single-use-seals"]
categories = ["cryptography", "encoding"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "dbc"
path = "src/lib.rs"

[dependencies]
amplify = { workspace = true }
base85 = "=2.0.0"
strict_encoding = { workspace = true }
commit_verify = { workspace = true, features = ["rand"] }
bp-consensus = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
serde_crate = { workspace = true, optional = true }

[features]
default = []
all = ["serde"]
serde = [
    "serde_crate",
    "bp-consensus/serde",
    "commit_verify/serde",
    "secp256k1/serde"
]

[package.metadata.docs.rs]
features = [ "all" ]
