[package]
name = "bp-primitives"
version = "0.10.0-rc.1"
description = "Bitcoin protocol primitives library"
keywords = ["lnp-bp", "smart-contracts", "bitcoin", "blockchain"]
categories = ["cryptography"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "bc"

[dependencies]
amplify = "4.0.0-beta.20"
secp256k1 = { version = "0.27.0", features = ["global-context"] }
strict_encoding = "2.0.0-rc.3"
commit_verify = "0.10.0-rc.2"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }

[features]
serde = [
    "serde_crate",
    "amplify/serde",
    "secp256k1/serde"
]

[package.metadata.docs.rs]
features = [ "all" ]
