[package]
name = "bp-primitives"
version = "0.10.2"
description = "Bitcoin protocol primitives library"
keywords = ["lnp-bp", "smart-contracts", "bitcoin", "blockchain"]
categories = ["cryptography"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "bc"

[dependencies]
amplify = { workspace = true }
secp256k1 = { version = "0.27.0", features = ["global-context"] }
strict_encoding = { workspace = true }
strict_types = { version = "1.2.0", optional = true }
commit_verify = { workspace = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }

[features]
default = []
all = ["stl", "serde"]
stl = ["strict_types"]
serde = [
    "serde_crate",
    "amplify/serde",
    "secp256k1/serde"
]

[package.metadata.docs.rs]
features = [ "all" ]
