[package]
name = "bp-raw"
version = "0.1.0"
edition = "2021"

[lib]
name = "bc"

[dependencies]
amplify = "4.0.0-beta.10"
secp256k1 = "0.26.0"
strict_encoding = "2.0.0-beta.5"
commit_verify = "0.10.0-beta.1"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }

[features]
serde = [
    "serde_crate",
    "amplify/serde"
]
