[package]
name = "bp-seals"
version = "0.10.5"
description = "Bitcoin protocol single-use-seals library"
keywords = ["lnp-bp", "bitcoin", "blockchain", "smart-contracts", "single-use-seals"]
categories = ["cryptography", "encoding"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "seals"
path = "src/lib.rs"

[dependencies]
amplify = { workspace = true }
single_use_seals = { workspace = true }
commit_verify = { workspace = true }
strict_encoding = { workspace = true }
baid58 = "0.3.0"
bp-primitives = { version = "0.10.5", path = "../primitives" }
bp-dbc = { version = "0.10.5", path = "../dbc" }
rand = "0.8.5"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }

[features]
default = []
all = ["serde"]
serde = ["amplify/serde", "commit_verify/serde", "bp-dbc/serde", "serde_crate"]

[package.metadata.docs.rs]
features = [ "all" ]
