[package]
name = "bp-seals"
version = { workspace = true }
description = "Bitcoin protocol single-use-seals library"
keywords = ["lnp-bp", "bitcoin", "blockchain", "smart-contracts", "single-use-seals"]
categories = ["cryptography", "encoding"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "seals"
path = "src/lib.rs"

[dependencies]
amplify = { workspace = true }
single_use_seals = { workspace = true }
commit_verify = { workspace = true }
strict_encoding = { workspace = true }
bp-consensus = { workspace = true }
bp-dbc = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
all = ["serde"]
serde = [
    "amplify/serde",
    "commit_verify/serde",
    "bp-consensus/serde",
    "bp-dbc/serde",
    "dep:serde"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom2 = { package = "getrandom", version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]
