[package]
name = "bp-seals"
version = { workspace = true }
description = "Bitcoin protocol single-use-seals library"
keywords = ["lnp-bp", "bitcoin", "blockchain", "smart-contracts", "single-use-seals"]
categories = ["cryptography", "encoding"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "seals"
path = "src/lib.rs"

[dependencies]
amplify = { workspace = true }
baid64 = "0.4.1"
commit_verify = { workspace = true }
strict_encoding = { workspace = true }
bp-consensus = { workspace = true }
rand = "0.9.1"
serde_crate = { workspace = true, optional = true }

[features]
default = []
all = ["serde"]
serde = [
    "amplify/serde",
    "commit_verify/serde",
    "bp-consensus/serde",
    "serde_crate"
]

[package.metadata.docs.rs]
features = ["all"]
